# deepwave

./: .gitignore  .travis.yml  CITATION.cff  CMakeLists.txt  INSTRUCTIONS.md  LICENSE  MANIFEST.in  PROGRESS_LOG.md  PROPOSAL.md  README.md  SPECIFICATION.md  build.py  default.nix  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  setup.py
.github/workflows/: build.yml  nixTest.yml  test.yml  windows.yml
deepwave/: __init__.py  utils.py  wavelets.py
deepwave/base/: __init__.py  extract.py  model.py  pad.py  propagator.py
deepwave/scalar/: __init__.py  scalar.c  scalar.cpp  scalar.h  scalar.py  scalar_born.py  scalar_cpu.cpp  scalar_device.h  scalar_gpu.cu  scalar_gpu.h  scalar_wrapper.cpp
docs/: acoustic.rst  conf.py  elastic.rst  example_1.py  example_1.rst  example_2.py  example_2.rst  example_3.py  example_3.rst  example_4.py  example_4.rst  example_5.py  example_5.rst  example_6.py  example_6.rst  example_7.py  example_7.rst  example_batched_models.py  example_batched_models.rst  example_callback_animation.py  example_callback_animation.rst  example_checkpointing.py  example_checkpointing.rst  example_custom_imaging_condition.py  example_custom_imaging_condition.rst  example_distributed.rst  example_distributed_ddp.py  example_distributed_dp.py  example_elastic.py  example_elastic.rst  example_elastic_complex_freesurface.py  example_elastic_groundroll.py  example_elastic_source.py  example_forward_model.py  example_forward_model.rst  example_fwi.py  example_fwi.rst  example_generated_model.py  example_generated_model.rst  example_gsot.py  (+36 more)
src/deepwave/: Makefile  __init__.py  acoustic.c  acoustic.cu  acoustic.py  acoustic_equation.py  backend_utils.py  build_linux.sh  build_macos.sh  build_windows.sh  common.h  common.py  common_cpu.h  common_gpu.h  common_new.py  elastic.c  elastic.cpp  elastic.cu  elastic.py  elastic_equation.py  generic_forward_func.py  location_interpolation.py  propagator_equation.py  regular_grid.h  regular_grid.py  ruff.toml  scalar.c  scalar.cpp  scalar.cu  scalar.py  scalar_born.c  scalar_born.cpp  scalar_born.cu  scalar_born.py  scalar_born_equation.py  scalar_equation.py  scalar_new.py  simple_compress.c  simple_compress.cu  simple_compress.h  (+6 more)
test/: amplitude_derivation.ipynb  check_zero_crossing.ipynb  measure_perf.py  test_1d.ipynb  test_2d.ipynb  test_3d.ipynb  test_extract.py  test_model.py  test_propagator.py  test_scalar.py  test_utils.py  wavelets.py
tests/: INDATA_FV  Ux_file_ascii  Uz_file_ascii  test_acoustic.py  test_backend_utils.py  test_callbacks.py  test_callbacks_acoustic.py  test_callbacks_born.py  test_callbacks_elastic.py  test_callbacks_scalar.py  test_callbacks_scalar_born.py  test_common.py  test_elastic.py  test_extract.py  test_location_interpolation.py  test_propagator.py  test_regular_grid.py  test_resample.py  test_scalar.py  test_scalar_born.py  test_staggered_grid.py  test_utils.py  test_wavelets.py
