[metadata]
name = deepwave
version = 0.0.11
author = Alan Richardson
author_email = alan@ausargeo.com
description = Wave propagation modules for PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ar4/deepwave
project_urls =
    Bug Tracker = https://github.com/ar4/deepwave/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
include_package_data = True
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires =
    torch
    ninja
tests_require =
    pytest
    scipy

[options.packages.find]
where = src
